--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
       <div class="footer">
         <div class="contact">
 	  <p>
-	    Shevaun Coker<br />
+	    <a href="about.html">Shevaun Coker</a><br />
 	    Web Developer<br />
 	  </p>
         </div>
